--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calendário</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <div class="container">
+        <h1>Calendário</h1>
+        <section clas="content-info">
+            <div class="meses mes-jan">Jan</div>
+            <div class="meses mes-fev">Fev</div>
+            <div class="meses mes-mar">Mar</div>
+            <div class="meses mes-abr">Abr</div>
+            <div class="meses mes-mai">Mai</div>
+            <div class="meses mes-jun">Jun</div>
+            <div class="meses mes-jul">Jul</div>
+            <div class="meses mes-ago">Ago</div>
+            <div class="meses mes-set">Set</div>
+            <div class="meses mes-out">Out</div>
+            <div class="meses mes-nov">Nov</div>
+            <div class="meses mes-dez">Dez</div>
+        </section>
+    </div>
+    </header>
+</body>
+</html>
 
